[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/switch.png" type="Texture" id=1]
[ext_resource path="res://Colliders/PlayerTrigger.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Interactive/Switch.gd" type="Script" id=3]
[ext_resource path="res://Colliders/HintPointer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[node name="Switch" type="Sprite"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -4, -8 )
hframes = 2
script = ExtResource( 3 )

[node name="HintPointer" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -9 )

[node name="PlayerTrigger" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerTrigger" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="TimerReset" type="Timer" parent="."]
[connection signal="area_entered" from="PlayerTrigger" to="." method="_on_PlayerTrigger_area_entered"]
[connection signal="area_exited" from="PlayerTrigger" to="." method="_on_PlayerTrigger_area_exited"]
[connection signal="use" from="PlayerTrigger" to="." method="_on_PlayerTrigger_use"]
[connection signal="timeout" from="TimerReset" to="." method="_on_TimerReset_timeout"]

[editable path="PlayerTrigger"]
